2003-05-10  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/System.cpp:  Corrected usage of tmpnam.

2003-05-09  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/nodeptr.h:  Fixed problem with
	  assignment to a null NodePtr.

2003-05-06  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.h,
	  src/openvrml/OpenVRML/vrml97node.cpp: Apply correct texture
	  coordinates for Text.

2003-05-05  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp:  Fixed errors rendering
	  some glyphs with interior contours.

2003-05-05  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp: Include <limits>; fixed
	  std::binary_function instantiation.

2003-04-06  Braden McDaniel  <braden@endoframe.com>

        * Updated to ANTLR 2.7.2.

2003-04-05  Braden McDaniel  <braden@endoframe.com>

        * src/lookat/ViewerGlut.cpp, src/lookat/ViewerGlut.h,
          src/lookat/lookat.cpp, src/openvrml/OpenVRML/Audio.cpp,
          src/openvrml/OpenVRML/Audio.h, src/openvrml/OpenVRML/Doc.cpp,
          src/openvrml/OpenVRML/Doc.h, src/openvrml/OpenVRML/Image.cpp,
          src/openvrml/OpenVRML/Image.h,
          src/openvrml/OpenVRML/ScriptJDK.cpp,
          src/openvrml/OpenVRML/ScriptJDK.h,
          src/openvrml/OpenVRML/System.cpp,
          src/openvrml/OpenVRML/System.h,
          src/openvrml/OpenVRML/Viewer.cpp,
          src/openvrml/OpenVRML/Viewer.h,
          src/openvrml/OpenVRML/Vrml97Parser.g,
          src/openvrml/OpenVRML/VrmlFrustum.cpp,
          src/openvrml/OpenVRML/VrmlFrustum.h,
          src/openvrml/OpenVRML/VrmlRenderContext.cpp,
          src/openvrml/OpenVRML/VrmlRenderContext.h,
          src/openvrml/OpenVRML/basetypes.cpp,
          src/openvrml/OpenVRML/basetypes.h,
          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/bvolume.cpp,